@@ -1,3 +1,15 @@
+2011-02-28  Mihai Parparita  <mihaip@chromium.org>
+
+        Reviewed by James Robinson.
+
+        NRWT should still upload results when it exits early due to too many failures
+        https://bugs.webkit.org/show_bug.cgi?id=55432
+        
+        Only keyboard interrupts should prevent results from being uploaded.
+
+        * Scripts/webkitpy/layout_tests/layout_package/test_runner.py:
+        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:
+
 2011-02-28  Alice Liu  <alice.liu@apple.com>
 
         Reviewed by Adam Roben and Gavin Barraclough.
